# adplay-unix

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  RELEASE  TODO  acinclude.m4  adplay.1  adplay.cc  adplay.cpp  adplay.qpg  adplay.spec  adplay_mdk.spec  adplug.desktop  config.h.in  configure.ac  configure.in  defines.h  disk.cc  disk.h  gnulib.txt  makefile  oss.cc  oss.h  output.h  players.h  system.h
doc/: Makefile.am  adplay.1
gnulib/: Makefile.am
m4/: alsa.m4  ao.m4  esd.m4  pkg.m4  sdl2.m4
m4/gnulib/: gnulib-cache.m4  gnulib-comp.m4
src/: .cvsignore  Makefile.am  adplay.cc  alsa.cc  alsa.h  ao.cc  ao.h  config.h  config.h.in  defines.h  disk.cc  disk.h  diskraw.h  esound.cc  esound.h  getopt.c  getopt.h  getopt1.c  getopt_compat.h  null.h  oss.cc  oss.h  output.cc  output.h  players.h  qsa.cc  qsa.h  retrowave.cc  retrowave.h  sdl.cc  sdl.h  sdl_driver.h
